--- a/info.yaml
+++ b/info.yaml
@@ -1,7 +1,7 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
   wokwi_id:     422960080008854529       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        "Nuno's first Wokwi design"      # Project title
+  title:        "Special code for letter n"      # Project title
   author:       "Nuno Jorge"      # Your name
   discord:      "nunojorge_39719"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Specific input binary word to display the letter n"      # One line description of what your project does
